--- a/src/app/components/user-list/user-list.component.html
+++ b/src/app/components/user-list/user-list.component.html
@@ -50,8 +50,13 @@
       <!-- Columna de Avatar -->
       <ng-container matColumnDef="avatar">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Avatar</th>
-        <td mat-cell *matCellDef="let user">{{ user.avatar }}</td>
+        <td mat-cell *matCellDef="let user">
+          <a [href]="user.avatar" target="_blank">
+            <img [src]="user.avatar" alt="Avatar" />
+          </a>
+        </td>
       </ng-container>
+
 
       <!-- Filas y Encabezados -->
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
